added attachment doc type