@@ -5,7 +5,6 @@ import org.springframework.util.StringUtils;
 import javax.persistence.AttributeConverter;
 import javax.persistence.Converter;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -23,6 +22,6 @@ public class StringListConverter implements AttributeConverter<List<String>, Str
 
     @Override
     public List<String> convertToEntityAttribute(String string) {
-        return StringUtils.hasText(string) ? new ArrayList<>(Arrays.asList(string.split(SPLIT_CHAR))) : new ArrayList<>();
+        return StringUtils.hasText(string) ? new ArrayList<>(List.of(string.split(SPLIT_CHAR))) : new ArrayList<>();
     }
 }
